<resources>
    <string name="app_name">ConstraintApp</string>
    <string name="lab_1">Lab 1</string>
    <string name="responsive_layout_1">Responsive Layout 1</string>
    <string name="word_this">This</string>
    <string name="word_is">is</string>
    <string name="word_my">my</string>
    <string name="word_first">first</string>
    <string name="android_application">Android Application</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
</resources>
